# Homegear-Bose

./: .gitignore  .project  CMakeLists.txt  README.md  configure.ac  copyDeviceXml.sh  makeCoverity.sh  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  rules
misc/Config Directory/: bose.conf
misc/Device Description Files/: Bose.xml
misc/State Directory/scripts/DeviceScripts/Bose/: EasyTTS.php  Polly.php  espeakTTS.php
src/: Bose.cpp  Bose.h  BoseCentral.cpp  BoseCentral.h  BosePacket.cpp  BosePacket.h  BosePeer.cpp  BosePeer.h  Factory.cpp  Factory.h  GD.cpp  GD.h  Interfaces.cpp  Interfaces.h  Makefile.am
src/PhysicalInterfaces/: EventServer.cpp  EventServer.h  IBoseInterface.cpp  IBoseInterface.h
